@@ -1,6 +1,14 @@
 /***********************************************************************
 X3 ChangeLog
 
+2007-02-12  Alex Schumann  <rubin@afternet.org>
+
+	* src/tools.c: adding ircd_strtolower() func
+
+	* src/common.h: adding ircd_strtolower() func
+
+	* src/nickserv.c: force accounts to lowercase at all inputs
+
 2007-02-11  Alex Schumann  <rubin@afternet.org>
 
 	* src/nickserv.c: fixed a bunch of ldap result value check bugs
